@@ -787,7 +787,7 @@ medqopts(			/* medium quality rendering options */
 	}
 	po = addarg(po, "-pt .08");
 	if (vbool(PENUMBRAS))
-		op = addarg(op, "-ds .2 -dj .5");
+		op = addarg(op, "-ds .2 -dj .9");
 	else
 		op = addarg(op, "-ds .3");
 	op = addarg(op, "-dt .1 -dc .5 -dr 1 -sj .7 -st .1");
